--- a/pom.xml
+++ b/pom.xml
@@ -2,47 +2,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>af.gov.anar</groupId>
-	<artifactId>anar-framework</artifactId>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.4.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>af.anar.gov.lib</groupId>
+	<artifactId>anar-lib-html</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>anar-framework</name>
-	<description>Anar Framework</description>
+	<name>anar-lib-html</name>
+	<description>HTML Utility Library of Anar Framework</description>
 
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 
-	<modules>
-		<module>anar-connect</module>
-		<module>anar-keycloack</module>
-		<module>anar-lib-activemq</module>
-		<module>anar-lib-api</module>
-		<module>anar-lib-audit</module>
-		<module>anar-lib-calender</module>
-		<module>anar-lib-checksum</module>
-		<module>anar-lib-core</module>
-		<module>anar-lib-cors</module>
-		<module>anar-lib-crypto</module>
-		<module>anar-lib-crypto-jce</module>
-		<module>anar-lib-csv</module>
-		<module>anar-lib-date</module>
-		<module>anar-lib-emptycheck</module>
-		<module>anar-lib-excel</module>
-		<module>anar-lib-file</module>
-		<module>anar-lib-hash</module>
-		<module>anar-lib-hmac</module>
-		<module>anar-lib-json</module>
-		<module>anar-lib-kafka</module>
-		<module>anar-lib-logger</module>
-		<module>anar-lib-mail</module>
-		<module>anar-lib-math</module>
-		<module>anar-lib-pdf</module>
-		<module>anar-lib-str</module>
-		<module>anar-lib-uuid</module>
-		<module>anar-lib-workflow</module>
-		<module>anar-lib-xml</module>
-		<module>anar-lib-zip</module>
-		<module>anar-servicetemplate</module>
-		<module>anar-webapptemplate</module>
-		<module>anar-keycloak</module>
-		<module>anar-datacollection-kit</module>
-	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
